<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activities.Addfrase">

    <TextView
        android:id="@+id/addFrase_text"
        style="@style/style_app_main_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_frase_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frase_title_text"
        style="@style/style_app_main_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="174dp"
        android:layout_marginRight="174dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/frase_titulo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/frase_titulo_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFrase_text"
        app:layout_constraintVertical_bias="0.17000002"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/frase_titulo_input"
        android:layout_width="300dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:autofillHints="Título de la frase"
        android:background="@drawable/input_rectangle_style"
        android:ems="10"
        android:inputType="textNoSuggestions|textPersonName"
        android:maxLength="18"
        android:hint="@string/frase_titulo_hint"
        android:paddingStart="7dp"
        android:paddingLeft="7dp"
        android:paddingEnd="7dp"
        app:errorEnabled = "true"
        app:layout_constraintBottom_toTopOf="@+id/frase_autor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_title_text" />

    <TextView
        android:id="@+id/frase_autor"
        style="@style/style_app_main_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="175dp"
        android:layout_marginRight="175dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/frase_autor_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/frase_autor_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_titulo_input" />

    <EditText
        android:id="@+id/frase_autor_input"
        android:layout_width="300dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:autofillHints="Autor de la frase"
        android:background="@drawable/input_rectangle_style"
        android:ems="10"
        android:hint="@string/frase_autor_hint"
        android:inputType="textNoSuggestions|textPersonName"
        android:maxLength="20"
        app:errorEnabled = "true"
        android:paddingStart="7dp"
        android:paddingLeft="7dp"
        android:paddingEnd="7dp"
        app:layout_constraintBottom_toTopOf="@+id/frase_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_autor" />

    <TextView
        android:id="@+id/frase_texto"
        style="@style/style_app_main_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/frase_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/frase_texto_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_autor_input" />

    <EditText
        android:id="@+id/frase_texto_input"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:autofillHints="Introduce el texto aquí"
        android:background="@drawable/input_rectangle_style"
        android:ems="10"
        app:errorEnabled = "true"
        android:gravity="top|start"
        android:hint="@string/frase_texto_hint"
        android:inputType="textMultiLine"
        android:lines="10"
        android:paddingStart="7dp"
        android:paddingLeft="7dp"
        android:paddingEnd="7dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_texto" />

    <Button
        android:id="@+id/add_bttn"
        style="@style/style_buttons"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_frase_bttn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frase_texto_input" />
</androidx.constraintlayout.widget.ConstraintLayout>