<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@drawable/style_list_element"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="25dp"
    android:layout_height="45dp">


    <TextView
        android:id="@+id/elementTitle"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_bold"
        android:gravity="start"
        android:paddingStart="35dp"
        android:paddingLeft="35dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:text="@string/element_default_title"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <View
        android:id="@+id/vertical_line_element"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="0.01"
        android:background="@color/white" />

    <ImageButton
        android:id="@+id/edit_bttn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_edit"
        android:contentDescription="@string/delete_edit_text" />

    <ImageButton
        android:id="@+id/delete_bttn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:layout_weight="0.2"
        app:srcCompat="@drawable/ic_trash"
        android:contentDescription="@string/delete_icon_text" />


</LinearLayout>